# JFKReveal

./: .coverage.Shawns-MacBook-Pro-2.local.73506.XoOnyCqx  .env.example  .gitignore  AGENT_TASKS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  prepare_for_production.sh  publish_to_twitter.py  pyproject.toml  pytest.ini  requirements.txt  run_tests.sh  setup.py  test_multi_model.sh  test_report.py
.cursor/rules/: cicd-rules.mdc  claude-code.mdc  clean-code.mdc  git-flow.mdc  global-rules.mdc  python.mdc  react.mdc  tailwind.mdc  typescript.mdc
.github/: CODEOWNERS  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: python-app.yml  tests.yml
.hypothesis/examples/04e6b3400353b141/: 4a527f9fcd1d5828  7357b2ee5fc7cdba  (+4 more)
config/: README.md  models.json
docs/: API_REFERENCE.md  ARCHITECTURE.md  CONFIGURATION.md  OCR_PERFORMANCE.md  _config.yml  index.html  index.md
docs/data/: index.md
docs/reports/: coverup_analysis.html  coverup_analysis.md  detailed_findings.html  detailed_findings.md  dummy_report.html  executive_summary.html  executive_summary.md  full_report.html  full_report.md  suspects_analysis.html  suspects_analysis.md  test_summary.md
src/jfkreveal/: __init__.py  __main__.py  factories.py  interfaces.py  main.py
tests/: conftest.py  test_document_analyzer.py  test_document_processor.py  test_main.py  test_text_cleaner.py  test_vector_store.py
tests/e2e/: README.md  conftest.py  test_e2e.py
tests/integration/: README.md  conftest.py  test_integration.py
tests/unit/: README.md  conftest.py  test_archives_gov_scraper.py  test_credentials.py  test_dependency_injection.py  test_document_analyzer.py  test_document_analyzer.py.bak  test_document_processor.py  test_document_processor_properties.py  test_findings_report.py  test_findings_report_models.py  test_helpers.py  test_main.py  test_model_config.py  test_model_registry.py  test_parallel_processor.py  test_semantic_search.py  test_text_cleaner.py  test_vector_store.py  test_visualization.py
tools/: model_config_cli.py  setup_models.py  setup_ollama.py
(+150 files in other folders)
