[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jfkreveal"
version = "0.1.0"
description = "Analysis tool for declassified JFK assassination documents"
authors = [
    {name = "PimpMyNines", email = "info@pimpmynines.com"}
]
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.2",
    "tqdm>=4.66.1",
    "backoff>=2.2.1",
    "PyMuPDF>=1.22.5",
    "nltk>=3.8.1",
    "spacy>=3.7.2",
    "langchain>=0.1.0",
    "langchain-openai>=0.0.2",
    "langchain-chroma>=0.0.1",
    "langchain-ollama>=0.0.1",
    "langchain-community>=0.0.1",
    "chromadb>=0.4.18",
    "pydantic>=2.5.0",
    "tenacity>=8.2.3",
    "openai>=1.3.0",
    "python-dotenv>=1.0.0",
    "markdown>=3.4.4",
    "plotly>=5.18.0",
    "dash>=2.14.1",
    "pandas>=2.1.1",
    "networkx>=3.1",
    "rank-bm25>=0.2.2",
    "scikit-learn>=1.3.0",
    "sentence-transformers>=2.2.2",
    "pytest>=7.4.3",
    "pytest-benchmark>=4.0.0",
    "hypothesis>=6.87.1",
    "python-louvain>=0.16"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
    "flake8>=6.0.0"
]

[project.scripts]
jfkreveal = "jfkreveal.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["jfkreveal"]
include-package-data = true
zip-safe = false

[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.setuptools.dynamic]
version = {attr = "jfkreveal.__version__"} 